--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "sources/scraper"]
 	path = sources/scraper
 	url = https://github.com/firmadyne/scraper.git
+[submodule "sources/libnvram"]
+	path = sources/libnvram
+	url = https://github.com/liert/libnvram.git
